--- a/Runder/Base.lproj/LaunchScreen.storyboard
+++ b/Runder/Base.lproj/LaunchScreen.storyboard
@@ -30,9 +30,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Image Systems" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ad-oM-okO">
+                                <rect key="frame" x="109" y="626" width="156" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="8ad-oM-okO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1Pe-NR-I89"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8ad-oM-okO" secondAttribute="bottom" constant="20" id="IgG-38-XcA"/>
                             <constraint firstItem="caI-BK-MkG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Kz7-s2-ucc"/>
                             <constraint firstItem="kDU-ns-Oak" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RH1-Aq-Vgn"/>
                             <constraint firstItem="caI-BK-MkG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kP8-Rc-FDk"/>
